# python-flask-container-example

./: AUTHORS  ChangeLog  README.rst  api.py  config.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api/: app.py  config.py  create_db_admin.py  manage.py  models.py
api/migrations/versions/: f6bd975abd53_.py
api/resource/: dump.py  user.py
api/service/: logger.py  receiver.py
docker/: Dockerfile  README.rst
resource/: user.py
tests/: test_user.py
