[metadata]
name = enya
summary = enya
description-file =
    README.rst
author = Max Meldrum
author-email = max@meldrum.se
classifier =
    Environment :: REST API
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

